// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type Literal Basic properties 1`] = `
"FROM:

        type Test = {
            a: number,
            b: 1,
            c?: string,
            d: string[]
        }
      

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.TypeLiteral(function(typeLiteral) {
      typeLiteral.property(
        'a',
        _runtime.default.NumberKeyword,
        false,
        _runtime.default.MantaAnnotation(undefined),
      );
      typeLiteral.property(
        'b',
        _runtime.default.Literal(1),
        false,
        _runtime.default.MantaAnnotation(undefined),
      );
      typeLiteral.property(
        'c',
        _runtime.default.StringKeyword,
        true,
        _runtime.default.MantaAnnotation(undefined),
      );
      typeLiteral.property(
        'd',
        _runtime.default.ArrayType(_runtime.default.StringKeyword),
        false,
        _runtime.default.MantaAnnotation(undefined),
      );
    });

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Type Literal Object Indexer 1`] = `
"FROM:

        type Test = {
          [key: string]: number,
          a: string,
        }
      

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.TypeLiteral(function(typeLiteral) {
      typeLiteral.property(
        'a',
        _runtime.default.StringKeyword,
        false,
        _runtime.default.MantaAnnotation(undefined),
      );
      typeLiteral.computedProperty(
        'key',
        _runtime.default.StringKeyword,
        _runtime.default.NumberKeyword,
        0,
        false,
        _runtime.default.MantaAnnotation(undefined),
      );
    });

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;
